# libhaze

./: CMakeLists.txt  Makefile  README.md
.github/workflows/: build_presets.yml
example/: Makefile
example/source/: main.c  main.cpp
include/: haze.h
include/haze/: console_main_loop.hpp  file_system_proxy.hpp  log.hpp  ptp_data_parser.hpp  ptp_responder.hpp  ptp_responder_types.hpp  results.hpp  threaded_file_transfer.hpp
include/vapours/: types.hpp
source/: haze.cpp  ptp_object_database.cpp  ptp_object_heap.cpp  ptp_responder.cpp  ptp_responder_android_operations.cpp  ptp_responder_mtp_operations.cpp  ptp_responder_ptp_operations.cpp  threaded_file_transfer.cpp  usb_session.cpp
